# iced

./: Cargo.toml
examples/video/: Cargo.toml
examples/video/src/: main.rs
graphics/: Cargo.toml
graphics/src/: layer.rs  primitive.rs  widget.rs
graphics/src/widget/: video.rs
native/: Cargo.toml
native/src/: widget.rs
native/src/widget/: video.rs
native/src/widget/video/: player.rs
src/: widget.rs
wgpu/: Cargo.toml
wgpu/src/: backend.rs  lib.rs  sample.rs
wgpu/src/shader/: sample.frag  sample.frag.spv  sample.vert  sample.vert.spv
