[package]
name = "iced_native"
version = "0.3.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "A renderer-agnostic library for native GUIs"
license = "MIT"
repository = "https://github.com/hecrj/iced"

[features]
debug = []

[dependencies]
twox-hash = "1.5"
unicode-segmentation = "1.6"
num-traits = "0.2"
gstreamer = "0.16.1"
gstreamer-app = { version = "0.16.0", features = ["v1_10"] }
futures-core = "0.3.4"

[dependencies.iced_core]
version = "0.3"
path = "../core"

[dependencies.iced_futures]
version = "0.2"
path = "../futures"
features = ["thread-pool"]
